# EnterpriseBench

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Makefile  PRD.md  README.md  RELEASE.md  aggregate_baseline_aq8e.py  prd_task_mix_realignment.md  premortem_phase4_task_expansion.md  recompute_headline_aq8e.py  recompute_headline_uu17.py  rescore_baseline_aq8e.py  rescore_mcp_only_uu17.py
.beads/: issues.jsonl  metadata.json  routes.jsonl
.claude/: rfc-dag.log.md  rfc-dag.state.json
architecture/: README.md  deployment.c4  model.c4  spec.c4  views.c4
benchmarks/: EXAMPLE_CHAIN_TASK.toml  EXAMPLE_TASK.toml
configs/: mirror_creation_manifest.json  phase4_expansion.txt  phase4_multimode.txt  phase4_rerun.txt  pilot_10.txt  pilot_manifest.json  repo_versions.json  sg_indexing_list.json  sweep_manifest.json  validation_registry.json
docs/: ARCHITECTURE.md  CONVERGENCE_REPORT.md  CONVERGENCE_REPORT_PHASE1_PILOT.md  NEXT_STEPS.md  (+13 more)
lib/: pyproject.toml
lib/eb_verify/: __init__.py  __main__.py  cli.py  qa_adapter.py  runner.py  schema_validator.py  scoring.py  task_parser.py
lib/eb_verify/_vendor/benchmark_qa_core/: VENDOR.md  __init__.py  _symbols.py  leakage.py  oracle.py  scoring.py  types.py
lib/eb_verify/judge/: __init__.py  backends.py  engine.py  models.py  prompts.py
lib/eb_verify/parsers/: __init__.py  base.py  go_ast.py  manifests.py  python_ast.py
lib/eb_verify/plugins/: __init__.py  answer.py  call_graph.py  code_patch.py  config_validator.py  incident_report.py  reproduction_script.py  runbook.py  security_assessment.py  topological_order.py
(+1518 files in other folders)
