[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eb-verify"
version = "0.2.0"
description = "EnterpriseBench verification library"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eb-verify = "eb_verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
